# agent-memory-core

./: .gitignore  CONTRIBUTING.md  ENTERPRISE.md  LICENSE  PRICING.md  README.md  REPRODUCE.md  ROADMAP.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: LEADERBOARD.md  README.md  metrics.py  run_all.py  run_benchmark.py
benchmark/adapters/: __init__.py  agent_memory_core_adapter.py  archon_memory_core_adapter.py  full_context.py  langchain_adapter.py  naive_vector.py
benchmark/amb_v2/: DESIGN_v2.3.md  PREREGISTERED.md  PREREGISTERED_v2.1.md  PREREGISTERED_v2.2.md  README.md  chart.py  chunks.py  harness.py  metrics.py  queries.py  requirements.txt  run.py  run_all.py  scenarios.py  simulator.py
benchmark/amb_v2/adapters/: agent_memory_core.py  archon_memory_core.py  base.py  langchain_adapter.py  langchain_dump.py  naive.py
benchmark/amb_v2/held_out/: h01.json.age  h02.json.age  h03.json.age  recipients.txt
benchmark/amb_v2/results/alpha-v2.0/: REPORT.md  agent-memory-core__stock__s42__n20.json  agent-memory-core__stock__s42__n30.json  agent-memory-core__stock__s42__n45.json  agent-memory-core__stock__s42__n60.json  agent-memory-core__stock__s43__n20.json  agent-memory-core__stock__s43__n30.json  agent-memory-core__stock__s43__n45.json  agent-memory-core__stock__s43__n60.json  agent-memory-core__stock__s44__n20.json  agent-memory-core__stock__s44__n30.json  agent-memory-core__stock__s44__n45.json  agent-memory-core__stock__s44__n60.json  agent-memory-core__tuned__s42__n20.json  agent-memory-core__tuned__s42__n30.json  agent-memory-core__tuned__s42__n45.json  agent-memory-core__tuned__s42__n60.json  (+56 more)
benchmark/amb_v2/scenarios-v23/: _generate.py
benchmark/amb_v2/scripts/: generate_held_out.py
benchmark/amb_v2/tests/: test_adapter_base.py  test_adapter_smoke.py  test_chart.py  test_chunks.py  test_e2e_mini.py  test_harness.py  test_langchain_dump.py  test_metrics.py  test_queries.py  test_regression.py  test_run_all.py  test_run_cli.py  test_scenarios.py  test_simulator.py
benchmark/results/: comparison-v012.json  comparison.json
benchmark/scenarios/: 01_personal_assistant.json  02_executive_cos.json  03_customer_support.json  04_health_coach.json  05_software_pm.json  06_sales_crm.json  07_travel_concierge.json  08_tutor.json  09_household.json  10_research_assistant.json
docs/: EVALUATION.md  INTEGRATIONS.md  SHOW_HN_DRAFT.md  WHY_NOT_CONTEXT_WINDOW.md  retrieval.md
examples/: llamaindex_integration.py  quickstart.py
scripts/: archon-mini-pipeline  archon-mini-pipeline.bak.2026-04-20-hwnode  mini-hwnode-backfill.py
specs/: amb-v2-plan.md  amb-v2-spec.md  amb-v2-tasks.md
src/agent_memory_core/: __init__.py  consolidation.py  eval.py  forgetting.py  graph.py  store.py  types.py  working.py
src/agent_memory_core/integrations/: __init__.py  langchain.py  llamaindex.py
src/archon_memory_core/: __init__.py  consolidation.py  eval.py  graph.py  store.py  working.py
src/archon_memory_core/integrations/: __init__.py  langchain.py  llamaindex.py
tests/: test_basic.py  test_supersedes.py
tests/integrations/: test_adapters_smoke.py  test_langchain_e2e.py  test_llamaindex_e2e.py
(+251 files in other folders)
